# src/modules/V1/Patient/Resources/PatientMedicalHistoryResource.php
@@ -11,24 +11,6 @@ use Modules\V1\User\Resources\UserResource;
 use OpenApi\Annotations as OA;
 use Shared\Helpers\StringHelper;
 
-/**
- * @OA\Schema(
- *     schema="PatientResource",
- *     title="Patient Resource",
- *     description="Patient resource representation",
- *
- *     @OA\Property(property="id", type="integer", example=1),
- *     @OA\Property(property="name", type="string", example="John Doe"),
- *     @OA\Property(property="email", type="string", example="john@example.com"),
- *     @OA\Property(
- *         property="roles",
- *         type="array",
- *
- *         @OA\Items(type="string", example="user")
- *     ),
- *     @OA\Property(property="gender",type="string", example="Male"),
- * )
- */
 #[AllowDynamicProperties] final class PatientMedicalHistoryResource extends JsonResource
 {
     /**
@@ -39,17 +21,10 @@ use Shared\Helpers\StringHelper;
     public function toArray(Request $request): array
     {
         return [
-            'id' => $this->id,
-            'name' => StringHelper::toTitleCase($this->name),
-            'email' => $this->email,
-            'gender' => $this->gender,
-            'dob' => $this->dob,
-            'address' => $this->address,
-            'profile_image' => $this->profile_image,
-            'mobile_no' => $this->mobile_no,
-            'role' => $this->role_id,
-            'user' => new UserResource($this->user),
-            'Medical_history' => $this->medicalHistories,
+            'medical_aid' => $this->medical_aid,
+            'race' => $this->race,
+            'ethnicity' => $this->ethnicity,
+            'mrn_number' => $this->mrn_number,
         ];
     }
 }
