# storage/api-docs/api-docs.json
@@ -596,8 +596,12 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "name": {
-                                        "description": "User's name",
+                                    "first_name": {
+                                        "description": "User's first name",
+                                        "type": "string"
+                                    },
+                                    "last_name": {
+                                        "description": "User's last name",
                                         "type": "string"
                                     },
                                     "email": {
@@ -1646,12 +1650,18 @@
                 "title": "User Registration Request",
                 "description": "Schema for the user registration request",
                 "required": [
-                    "name",
+                    "first_name",
+                    "last_name",
                     "email",
                     "password"
                 ],
                 "properties": {
-                    "name": {
+                    "first_name": {
+                        "type": "string",
+                        "maxLength": 255,
+                        "example": "John"
+                    },
+                    "last_name": {
                         "type": "string",
                         "maxLength": 255,
                         "example": "John"
@@ -1812,7 +1822,12 @@
                     "address"
                 ],
                 "properties": {
-                    "name": {
+                    "first_name": {
+                        "description": "User's first name",
+                        "type": "string",
+                        "example": "John"
+                    },
+                    "last_name": {
                         "description": "User's first name",
                         "type": "string",
                         "example": "John"
@@ -1821,21 +1836,6 @@
                         "description": "User's Phone Number",
                         "type": "number",
                         "example": "1234567895"
-                    },
-                    "gender": {
-                        "description": "User's gender",
-                        "type": "string",
-                        "example": "male"
-                    },
-                    "dob": {
-                        "description": "User's date of birth",
-                        "type": "string",
-                        "example": "2002-04-22"
-                    },
-                    "address": {
-                        "description": "User's address",
-                        "type": "string",
-                        "example": "Test address, Ahmedabad"
                     },
                     "profile_image": {
                         "description": "User's image",
